--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,9 @@ services:
   mongodb:
     image: mongo:6.0
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
       MONGO_INITDB_DATABASE: rclone
-    volumes:
-      - ./mongodb_data:/data/db
+#    volumes:
+#      - ./mongodb_data:/data/db
     ports:
       - "27017:27017"
     networks:
@@ -17,7 +15,7 @@ services:
   backend:
     image: rclone-sync-hub-backend:latest
     environment:
-      - MONGO_URI=mongodb://admin:password@mongodb:27017/
+      - MONGO_URI=mongodb://mongodb:27017/
     ports:
       - "5001:5001"  # 暴露后端端口
     depends_on:
