--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: mongo:6.0
     environment:
       MONGO_INITDB_DATABASE: rclone
-#    volumes:
-#      - ./mongodb_data:/data/db
+    volumes:
+      - ./mongodb_data:/data/db
     ports:
       - "27017:27017"
     networks:
