重构项目结构

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   mongodb:
     image: mongo:6.0
+    container_name: rclone-sync-mongodb_container
     environment:
       MONGO_INITDB_DATABASE: rclone
     volumes:
@@ -11,24 +12,50 @@ services:
       - "27017:27017"
     networks:
       - rclone-sync-net
+    restart: unless-stopped
 
-  backend:
-    image: zane626/rclone-sync-hub-backend:latest
-    environment:
-      - MONGO_URI=mongodb://mongodb:27017/
+  redis:
+    image: redis:7.0-alpine
+    container_name: rclone-sync-redis_container
     ports:
-      - "5001:5001"  # 暴露后端端口
-    depends_on:
-      - mongodb
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+      - ./logs:/var/log/supervisor
     networks:
       - rclone-sync-net
+    restart: unless-stopped
+
+  backend:
+    build: zane626/rclone-sync-hub-backend:latest
+    container_name: rclone-sync-hub-backend_container
+    environment:
+      - FLASK_APP=app
+      - FLASK_ENV=production
+      - MONGO_URI=mongodb://mongodb:27017/rclone
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    ports:
+      - "5001:5001"
+      - "5555:5555"  # Flower监控界面
+    depends_on:
+      - mongodb
+      - redis
+    networks:
+      - rclone-sync-net
+    restart: unless-stopped
+    volumes:
+      - .:/app
 
   frontend:
     image: zane626/rclone-sync-hub-frontend:latest
+    container_name: rclone-sync-hub-frontend_container
     ports:
       - "8080:80"
     environment:
-      - API_URL=http://backend:5001  # 默认API地址，可通过环境变量覆盖
+      - API_URL=http://backend:5001  # 指向app服务
+    depends_on:
+      - backend
     networks:
       - rclone-sync-net
 
