refactor(backend): 重构配置管理与Celery任务处理
- 将环境变量配置集中到Config类管理，支持多环境配置
- 重构Celery任务队列路由与配置，支持自定义队列
- 使用supervisord统一管理容器内进程
- 优化数据库连接管理，避免Flask上下文依赖
- 更新README文档，完善使用说明与部署指南

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,7 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [program:gunicorn]
-command=gunicorn --config gunicorn.conf.py --bind 0.0.0.0:5001 --workers 1 --timeout 120 --access-logfile - --error-logfile - app:create_app()
+command=gunicorn --config gunicorn_conf.py --bind 0.0.0.0:5001 --workers 1 --timeout 120 --access-logfile - --error-logfile - app:create_app()
 directory=/app
 user=root
 autostart=true
@@ -15,7 +15,7 @@ stderr_logfile=/var/log/supervisor/gunicorn_err.log
 stdout_logfile=/var/log/supervisor/gunicorn_out.log
 
 [program:celery-worker]
-command=celery -A app.celery_app worker --loglevel=info --concurrency=4
+command=python scripts/run_celery.py worker
 directory=/app
 user=root
 autostart=true
@@ -25,7 +25,7 @@ stderr_logfile=/var/log/supervisor/celery_worker_err.log
 stdout_logfile=/var/log/supervisor/celery_worker_out.log
 
 [program:celery-beat]
-command=celery -A app.celery_app beat --loglevel=info
+command=python scripts/run_celery.py beat
 directory=/app
 user=root
 autostart=true
