--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,10 @@ services:
   backend:
     image: zane626/rclone-sync-hub-backend:latest
     container_name: rclone-sync-hub-backend_container
+    env_file:
+      - ./.env.prod
     environment:
-      - FLASK_APP=app
       - FLASK_ENV=production
-      - MONGO_URI=mongodb://mongodb:27017/rclone
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     ports:
       - "5001:5001"
       - "5555:5555"  # Flower监控界面
