--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,35 +1,60 @@
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
+pidfile=/app/supervisord.pid
 childlogdir=/var/log/supervisor
+user=appuser
 
 [program:gunicorn]
-command=gunicorn --config gunicorn_conf.py --bind 0.0.0.0:5001 --workers 1 --timeout 120 --access-logfile - --error-logfile - app:create_app()
+command=gunicorn --config gunicorn_conf.py --bind 0.0.0.0:5001 --workers 1 --timeout 120 --access-logfile - --error-logfile - "app:create_app()"
 directory=/app
-user=root
+user=appuser
 autostart=true
 autorestart=true
-startretries=5
+startretries=10
+startsecs=10
+stopwaitsecs=30
+killasgroup=true
+stopasgroup=true
 stderr_logfile=/var/log/supervisor/gunicorn_err.log
 stdout_logfile=/var/log/supervisor/gunicorn_out.log
+stderr_logfile_maxbytes=50MB
+stdout_logfile_maxbytes=50MB
+stderr_logfile_backups=5
+stdout_logfile_backups=5
 
 [program:celery-worker]
 command=python scripts/run_celery.py worker
 directory=/app
-user=root
+user=appuser
 autostart=true
 autorestart=true
-startretries=5
+startretries=10
+startsecs=10
+stopwaitsecs=30
+killasgroup=true
+stopasgroup=true
 stderr_logfile=/var/log/supervisor/celery_worker_err.log
 stdout_logfile=/var/log/supervisor/celery_worker_out.log
+stderr_logfile_maxbytes=50MB
+stdout_logfile_maxbytes=50MB
+stderr_logfile_backups=5
+stdout_logfile_backups=5
 
 [program:celery-beat]
 command=python scripts/run_celery.py beat
 directory=/app
-user=root
+user=appuser
 autostart=true
 autorestart=true
-startretries=5
+startretries=10
+startsecs=10
+stopwaitsecs=30
+killasgroup=true
+stopasgroup=true
 stderr_logfile=/var/log/supervisor/celery_beat_err.log
 stdout_logfile=/var/log/supervisor/celery_beat_out.log
+stderr_logfile_maxbytes=50MB
+stdout_logfile_maxbytes=50MB
+stderr_logfile_backups=5
+stdout_logfile_backups=5
