feat(任务管理): 重构任务调度为使用Celery Beat
- 移除任务中的自我调度逻辑，改为通过Celery Beat配置定时任务
- 添加文件夹检测和任务队列检测的定时任务配置
- 更新.env.prod配置文件，增加相关环境变量

--- a/.env.prod
+++ b/.env.prod
@@ -29,3 +29,11 @@ CELERY_BEAT_PIDFILE=/app/celerybeat.pid
 # Flower配置
 FLOWER_PORT=5555
 FLOWER_BASIC_AUTH=admin:password
+ENABLE_FLOWER=false
+
+# Celery Beat配置
+ENABLE_CELERY_BEAT=true
+
+# 任务管理配置
+TASK_RUN_MODE=celery
+DELAY=600
